<resources>
    <string name="app_name">XoomNavigation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_title">Splash Screen</string>
    <string name="login_button">Login</string>
    <string name="signUp_button">Signup</string>
    <string name="onboarding_title">Oboarding</string>
    <string name="recipients_title">My Recipients</string>
    <string name="activity_title">Activity Screen</string>
    <string name="login_xoom">Login With Xoom</string>
    <string name="login_paypal">Login With PayPal</string>
    <string name="name_login">Name</string>
    <string name="password_login">Password</string>
    <string name="settings">Settings</string>
    <string name="recipients_tab">recipients</string>
    <string name="activity_tab">activity</string>
    <string name="email_signup">Email</string>

    // Shared preferences keys
    <string name="authenticated_user">authenticated_user</string>
    <string name="login_with_xoom">login_with_xoom</string>
    <string name="login_with_paypal">login_with_paypal</string>

</resources>
